alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @import url('https://fonts.cdnfonts.com/css/nunito-sans');
 @import url('https://db.onlinewebfonts.com/c/860c3ec7bbc5da3e97233ccecafe512e?family=Circular+Std+Book');
 
+@font-face {
+    font-family: CircularStd;
+    src: url("./font/CircularStdBook.ttf");
+}
 .App{
     box-sizing: border-box;
     margin: 0;
@@ -24,7 +28,7 @@
     
 }
 .circular-font{
-    font-family: 'Circular Std Book';
+    font-family: "CircularStd";
 }
 .nunito-font{
     font-family: 'Nunito Sans';
@@ -50,7 +54,7 @@
 
 .pic{
     background:
-        url(../pictures/percentage.png),
+        url(./pictures/percentage.png),
         #E1EBFB -65.081px -68.93px / 160.541% 138.14% no-repeat;
 }
 
